# cellular_automaton_cpp

./: CMakeLists.txt  README.md
cellular_automaton/: CMakeLists.txt  cell.cpp  cell.hpp  display.cpp  display.hpp  main.cpp  main.hpp  matrix.cpp  matrix.hpp  rule.cpp  rule.hpp  rule_set.cpp  rule_set.hpp  simulation.cpp  simulation.hpp  unit_utilities.cpp  unit_utilities.hpp
